infrastructure/kubernetes-manifests/backend-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  namespace: proj-app
  labels:
    app: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: backend
