infrastructure/kubernetes-manifests/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  namespace: proj-app
  labels:
    app: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: frontend
